wip - man now standing

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -104,7 +104,7 @@ Update this section as phases are completed so future agents know the current st
 |-------|--------|-------|
 | 0 — Project Setup | **Complete** | Unity 6000.0.33f1, packages added, physics configured, layers 8–12 set, folder structure created. |
 | 1 — Ragdoll Skeleton | **Scripts written** | `RagdollSetup.cs` done. `RagdollBuilder` Editor tool creates prefab — run via Tools menu. Tests written and passing. Pending: open Unity, run `Tools → Build Player Ragdoll`, drop-test prefab. |
-| 2 — Balance Controller | Not started | |
+| 2 — Balance Controller | **Scripts written (2A+2B+2C done)** | Joint drives added in 2A. `GroundSensor.cs` done in 2B. `BalanceController.cs` done in 2C — PD torque, IsFallen, SetFacingDirection. Tests 12/12 passing. |
 | 3 — Locomotion | Not started | |
 | 4 — Grabbing & Combat | Not started | |
 | 5 — Networking | Not started | |
@@ -124,6 +124,12 @@ A. Understand → B. Comment Design → C. Write Tests (red) → D. Implement (g
 Present the F1–F10 self-review table to the user before committing. See `CODING_STANDARDS.md` §1 Phase F for the full checklist.
 
 Run tests from the terminal using the commands in `AGENT_TEST_RUNNING.md`. Do not ask the user to open the Test Runner window.
+
+### Unity Test Lock Guardrail
+
+- Never run two Unity batch commands in parallel for the same project path.
+- Before running tests, ensure no Unity process is open for this project.
+- Run EditMode first, then PlayMode, and verify that `TestResults/*.xml` timestamps are freshly updated.
 
 ---
 
