--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -130,6 +130,8 @@ Run tests from the terminal using the commands in `AGENT_TEST_RUNNING.md`. Do no
 - Never run two Unity batch commands in parallel for the same project path.
 - Before running tests, ensure no Unity process is open for this project.
 - Run EditMode first, then PlayMode, and verify that `TestResults/*.xml` timestamps are freshly updated.
+- Prefer the absolute-path `-NoProfile` invocation of `Tools/Run-UnityTests.ps1` for better terminal reliability.
+- If Unity exits but `TestResults/*.xml` is missing, treat it as transient infra/lock race and rerun (up to 2–3 attempts) before concluding failure.
 
 ---
 
