--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -103,9 +103,20 @@ Update this section as phases are completed so future agents know the current st
 | Phase | Status | Notes |
 |-------|--------|-------|
 | 0 — Project Setup | **Complete** | Unity 6000.0.33f1, packages added, physics configured, layers 8–12 set, folder structure created. |
-| 1 — Ragdoll Skeleton | **Scripts written** | `RagdollSetup.cs` done. `RagdollBuilder` Editor tool creates prefab — run via Tools menu. Tests written and passing. Pending: open Unity, run `Tools → Build Player Ragdoll`, drop-test prefab. |
-| 2 — Balance Controller | **Scripts written (2A+2B+2C done)** | Joint drives added in 2A. `GroundSensor.cs` done in 2B. `BalanceController.cs` done in 2C — PD torque, IsFallen, SetFacingDirection. Tests 12/12 passing. |
-| 3 — Locomotion | Not started | |
+| 1 — Ragdoll Skeleton | **Complete** | `RagdollSetup.cs` done. `RagdollBuilder` Editor tool creates prefab. Tests passing. |
+| 2 — Balance Controller | **Complete** | 2A joint drives, 2B `GroundSensor.cs`, 2C `BalanceController.cs` — PD torque, IsFallen, SetFacingDirection. All tests passing. |
+| 3A — Player Input | **Complete** | Input action wiring done. |
+| 3B1–3B3 — PlayerMovement | **Complete** | Movement forces, speed cap, `SetMoveInputForTest` seam added. |
+| 3C1–3C3 — FSM + Get-Up | **Complete** | `CharacterState.cs` scaffold, transitions, fallen timer, get-up impulse + recovery timeout. |
+| 3D1 — Yaw Torque Split | **Complete (2026-02-22)** | Split upright (pitch/roll) and yaw (world Y) into separate PD torques. `_kPYaw`, `_kDYaw` added. Airborne multiplier upright-only. |
+| 3D2 — Yaw Stability Hardening | **Complete (2026-02-22)** | Dead zone `_yawDeadZoneDeg` (default 2°), normalised yaw vectors, zero-input facing retention, NaN guards. 59/59 PlayMode + 9 EditMode passing. |
+| **3E1 — LegAnimator Core** | **Complete (2026-02-22)** | `LegAnimator.cs` on Hips. Phase accumulator from move input magnitude. Sinusoidal upper-leg alternation (L/R offset π). Constant knee-bend lower legs. Fallen/GettingUp bypass to identity. 18 new PlayMode tests; 77/77 PlayMode + 9/9 EditMode passing. |
+| 3E2 — Leg Settle & Idle Blend | Not started | |
+| 3F1 — Jump Impulse | Not started | |
+| 3F2 — Airborne Leg Spring | Not started | |
+| 3G1 — Camera Follow | Not started | |
+| 3G2 — Camera Scene Wiring | Not started | |
+| 3T — Phase 3 Test Pass | Not started | |
 | 4 — Grabbing & Combat | Not started | |
 | 5 — Networking | Not started | |
 | 6 — Game Loop & UI | Not started | |
