Phase 3E1/3E2 fixes: correct leg joint axes, bump springs, knee-lift regression test (101/101)

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -144,6 +144,22 @@ Run tests from the terminal using the commands in `AGENT_TEST_RUNNING.md`. Do no
 - Prefer the absolute-path `-NoProfile` invocation of `Tools/Run-UnityTests.ps1` for better terminal reliability.
 - If Unity exits but `TestResults/*.xml` is missing, treat it as transient infra/lock race and rerun (up to 2–3 attempts) before concluding failure.
 
+### Test Quality Rule — Outcomes over Inputs
+
+**Prefer outcome-based tests over input-based tests.**
+
+- ❌ **Weak:** Assert that `targetRotation` was set to a certain value → only proves the input was applied
+- ✅ **Strong:** Assert that the joint/transform *physically moved* to a measurable position or angle → proves the system actually worked
+
+Examples of outcome-based tests:
+- A leg lift test that asserts `LowerLeg.position.y` exceeds a minimum threshold after N physics frames of walking — not just that `targetRotation` was set
+- A balance test that asserts the character's hips stay within X degrees of upright after N frames — not just that torque was applied
+- A get-up test that asserts the character reaches a standing hip height — not just that `GettingUp` state was entered
+
+**Why:** Input-based tests can pass even when the physics system is completely broken (wrong axis, weak springs, wrong drive mode). Outcome-based tests catch real regressions. When in doubt, ask: *"would this test have caught the dragging-feet bug?"* If no, make it stronger.
+
+Every new PlayMode test should have at least one outcome assertion alongside any input/state assertions.
+
 ---
 
 *Update this file whenever systems, namespaces, architecture, constraints, or phase status change.*
