docs: add 3E fixes row and outcome-based test rule to phase tracker

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -112,6 +112,7 @@ Update this section as phases are completed so future agents know the current st
 | 3D2 — Yaw Stability Hardening | **Complete (2026-02-22)** | Dead zone `_yawDeadZoneDeg` (default 2°), normalised yaw vectors, zero-input facing retention, NaN guards. 59/59 PlayMode + 9 EditMode passing. |
 | **3E1 — LegAnimator Core** | **Complete (2026-02-22)** | `LegAnimator.cs` on Hips. Phase accumulator from move input magnitude. Sinusoidal upper-leg alternation (L/R offset π). Constant knee-bend lower legs. Fallen/GettingUp bypass to identity. 18 new PlayMode tests; 77/77 PlayMode + 9/9 EditMode passing. |
 | **3E2 — Leg Settle & Idle Blend** | **Complete (2026-02-22)** | `_idleBlendSpeed` serialized field added. Phase decay toward 0 on idle. `_smoothedInputMag` ramps 0→1 on gait re-entry (anti-pop). Legs snap to identity when idle. 8 new PlayMode tests; 85/85 PlayMode passing. |
+| **3E fixes** | **Complete (2026-02-22)** | Fixed joint axis (Z→X via `_swingAxis`), bumped leg springs to 1200 Nm/rad, enforced Slerp drive mode. Knee-lift regression test added (`LowerLeg_WhenWalking_LiftsBeyondMinimumThreshold`, 5° threshold, outcome-based). 101/101 passing. |
 | 3F1 — Jump Impulse | Not started | |
 | 3F2 — Airborne Leg Spring | Not started | |
 | 3G1 — Camera Follow | Not started | |
