--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -113,6 +113,7 @@ Update this section as phases are completed so future agents know the current st
 | **3E1 — LegAnimator Core** | **Complete (2026-02-22)** | `LegAnimator.cs` on Hips. Phase accumulator from move input magnitude. Sinusoidal upper-leg alternation (L/R offset π). Constant knee-bend lower legs. Fallen/GettingUp bypass to identity. 18 new PlayMode tests; 77/77 PlayMode + 9/9 EditMode passing. |
 | **3E2 — Leg Settle & Idle Blend** | **Complete (2026-02-22)** | `_idleBlendSpeed` serialized field added. Phase decay toward 0 on idle. `_smoothedInputMag` ramps 0→1 on gait re-entry (anti-pop). Legs snap to identity when idle. 8 new PlayMode tests; 85/85 PlayMode passing. |
 | **3E fixes** | **Complete (2026-02-22)** | Fixed joint axis (Z→X via `_swingAxis`), bumped leg springs to 1200 Nm/rad, enforced Slerp drive mode. Knee-lift regression test added (`LowerLeg_WhenWalking_LiftsBeyondMinimumThreshold`, 5° threshold, outcome-based). 101/101 passing. |
+| **3E3 — World-Space Leg Swing** | **Complete (2026-02-22)** | `_useWorldSpaceSwing` (bool, default true) added. Leg swing now computed relative to world-space movement direction (velocity proxy, XZ input fallback). `ApplyWorldSpaceJointTarget` converts world rotation to connected-body local frame. Knee bend uses same world-horizontal axis so knees never fold into ground regardless of torso pitch. 3 new PlayMode tests; 104/104 PlayMode + 9/9 EditMode passing. |
 | 3F1 — Jump Impulse | Not started | |
 | 3F2 — Airborne Leg Spring | Not started | |
 | 3G1 — Camera Follow | Not started | |
