--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -106,7 +106,7 @@ Update this section as phases are completed so future agents know the current st
 | 1 — Ragdoll Skeleton | **Complete** | `RagdollSetup.cs` done. `RagdollBuilder` Editor tool creates prefab. Tests passing. |
 | 2 — Balance Controller | **Complete** | 2A joint drives, 2B `GroundSensor.cs`, 2C `BalanceController.cs` — PD torque, IsFallen, SetFacingDirection. All tests passing. |
 | 3A — Player Input | **Complete** | Input action wiring done. |
-| 3B1–3B3 — PlayerMovement | **Complete** | Movement forces, speed cap, `SetMoveInputForTest` seam added. |
+| 3B1–3B3 — PlayerMovement | **Complete** | Movement forces, speed cap, `SetMoveInputOverride` seam added. |
 | 3C1–3C3 — FSM + Get-Up | **Complete** | `CharacterState.cs` scaffold, transitions, fallen timer, get-up impulse + recovery timeout. |
 | 3D1 — Yaw Torque Split | **Complete (2026-02-22)** | Split upright (pitch/roll) and yaw (world Y) into separate PD torques. `_kPYaw`, `_kDYaw` added. Airborne multiplier upright-only. |
 | 3D2 — Yaw Stability Hardening | **Complete (2026-02-22)** | Dead zone `_yawDeadZoneDeg` (default 2°), normalised yaw vectors, zero-input facing retention, NaN guards. 59/59 PlayMode + 9 EditMode passing. |
