feat: ArmAnimator — counter-swing arm gait, UpperArm SLERP drives (12 passing)

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -25,7 +25,7 @@ Multiplayer ragdoll brawler (Gang Beasts–style). 2–4 players control physics
 
 | Namespace / Folder | Purpose | Key Classes |
 |--------------------|---------|-------------|
-| `Character/` | Ragdoll body, balance, movement, state machine, combat | `RagdollSetup`, `BalanceController`, `GroundSensor`, `PlayerMovement`, `LegAnimator`, `CharacterState`, `HandGrabber`, `HitReceiver` |
+| `Character/` | Ragdoll body, balance, movement, state machine, combat | `RagdollSetup`, `BalanceController`, `GroundSensor`, `PlayerMovement`, `LegAnimator`, `ArmAnimator`, `CharacterState`, `HandGrabber`, `HitReceiver` |
 | `Core/` | Game-wide config, utilities, constants | `GameSettings` |
 | `Input/` | New Input System action maps | `PlayerInputActions` (asset) |
 | `Networking/` | NGO components, RPCs, spawn management | `PlayerNetworkInput`, `GrabSync`, `GameManager` |
@@ -53,6 +53,7 @@ Input (Update)          Network (ServerRpc)
  │   HitReceiver (knockout)       │
  │   CharacterState (FSM)         │
  │   LegAnimator (joint targets)  │
+ │   ArmAnimator (counter-swing)  │
  │         FixedUpdate @ 100 Hz    │
  └──────────────┬───────────────────┘
                 │
@@ -114,6 +115,7 @@ Update this section as phases are completed so future agents know the current st
 | **3E2 — Leg Settle & Idle Blend** | **Complete (2026-02-22)** | `_idleBlendSpeed` serialized field added. Phase decay toward 0 on idle. `_smoothedInputMag` ramps 0→1 on gait re-entry (anti-pop). Legs snap to identity when idle. 8 new PlayMode tests; 85/85 PlayMode passing. |
 | **3E fixes** | **Complete (2026-02-22)** | Fixed joint axis (Z→X via `_swingAxis`), bumped leg springs to 1200 Nm/rad, enforced Slerp drive mode. Knee-lift regression test added (`LowerLeg_WhenWalking_LiftsBeyondMinimumThreshold`, 5° threshold, outcome-based). 101/101 passing. |
 | **3E3 — World-Space Leg Swing** | **Complete (2026-02-22)** | `_useWorldSpaceSwing` (bool, default true) added. Leg swing now computed relative to world-space movement direction (velocity proxy, XZ input fallback). `ApplyWorldSpaceJointTarget` converts world rotation to connected-body local frame. Knee bend uses same world-horizontal axis so knees never fold into ground regardless of torso pitch. 3 new PlayMode tests; 104/104 PlayMode + 9/9 EditMode passing. |
+| **3E4 — ArmAnimator** | **Complete (2026-02-23)** | `ArmAnimator.cs` added — counter-swings arms opposite to legs using `LegAnimator.Phase` and `LegAnimator.SmoothedInputMag` (two new public properties). UpperArm SLERP drives added to `RagdollSetup` (spring=800, damper=80, maxForce=3000). LowerArm/Hand joints remain floppy. 3 new EditMode tests; 12/12 EditMode passing. |
 | 3F1 — Jump Impulse | Not started | |
 | 3F2 — Airborne Leg Spring | Not started | |
 | 3G1 — Camera Follow | Not started | |
