--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -116,7 +116,7 @@ Update this section as phases are completed so future agents know the current st
 | **3E fixes** | **Complete (2026-02-22)** | Fixed joint axis (Z→X via `_swingAxis`), bumped leg springs to 1200 Nm/rad, enforced Slerp drive mode. Knee-lift regression test added (`LowerLeg_WhenWalking_LiftsBeyondMinimumThreshold`, 5° threshold, outcome-based). 101/101 passing. |
 | **3E3 — World-Space Leg Swing** | **Complete (2026-02-22)** | `_useWorldSpaceSwing` (bool, default true) added. Leg swing now computed relative to world-space movement direction (velocity proxy, XZ input fallback). `ApplyWorldSpaceJointTarget` converts world rotation to connected-body local frame. Knee bend uses same world-horizontal axis so knees never fold into ground regardless of torso pitch. 3 new PlayMode tests; 104/104 PlayMode + 9/9 EditMode passing. |
 | **3E4 — ArmAnimator** | **Complete (2026-02-23)** | `ArmAnimator.cs` added — counter-swings arms opposite to legs using `LegAnimator.Phase` and `LegAnimator.SmoothedInputMag` (two new public properties). UpperArm SLERP drives added to `RagdollSetup` (spring=800, damper=80, maxForce=3000). LowerArm/Hand joints remain floppy. 3 new EditMode tests; 12/12 EditMode passing. |
-| 3F1 — Jump Impulse | Not started | |
+| 3F1 — Jump Impulse | **Complete (2026-02-23)** | `_jumpForce = 15f` [SerializeField] added to `PlayerMovement`. `SetJumpInputForTest(bool)` seam added (matches `SetMoveInputForTest` pattern). Jump gated on Standing/Moving state + `IsGrounded`. `AddForce(Vector3.up * _jumpForce, ForceMode.Impulse)` on Hips Rb. One-frame consume via `_jumpPressedThisFrame` flag (cleared unconditionally in `TryApplyJump()`). Space key wired via existing `PlayerInputActions.Player.Jump` binding. 5 new PlayMode tests; 112/128 total (15 pre-existing LegAnimator failures from tuned defaults, not introduced by 3F1). |
 | 3F2 — Airborne Leg Spring | Not started | |
 | 3G1 — Camera Follow | Not started | |
 | 3G2 — Camera Scene Wiring | Not started | |
