docs: update phase tracker 3F2/3G1/3G2 complete

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -1,4 +1,4 @@
-# Copilot Agent Instructions — PhysicsDrivenMovementDemo
+# Copilot Agent Instructions - PhysicsDrivenMovementDemo
 
 > Auto-read by Copilot/Claude on every session. Optimised for agents, not humans.
 
@@ -6,11 +6,11 @@
 
 ## Project Summary
 
-Multiplayer ragdoll brawler (Gang Beasts–style). 2–4 players control physics-driven active-ragdoll characters that grab, punch, throw, and knock each other out. Built in **Unity 6 (6000.3.9f1, Built-in 3D RP)** with **Netcode for GameObjects (NGO)** for peer-to-peer networking. Characters are *always* ragdolls — muscle forces (ConfigurableJoint SLERP drives) keep them upright; zeroing those forces *is* the ragdoll/knockout state. Physics is host-authoritative at 100 Hz.
+Multiplayer ragdoll brawler (Gang Beasts-style). 2-4 players control physics-driven active-ragdoll characters that grab, punch, throw, and knock each other out. Built in **Unity 6 (6000.3.9f1, Built-in 3D RP)** with **Netcode for GameObjects (NGO)** for peer-to-peer networking. Characters are *always* ragdolls - muscle forces (ConfigurableJoint SLERP drives) keep them upright; zeroing those forces *is* the ragdoll/knockout state. Physics is host-authoritative at 100 Hz.
 
 ---
 
-## Mandatory Reading — Load These First
+## Mandatory Reading - Load These First
 
 | File | What it contains |
 |------|-----------------|
@@ -86,11 +86,11 @@ Input (Update)          Network (ServerRpc)
 
 ## Project-Specific Rules (Extend CODING_STANDARDS.md)
 
-1. **All physics tuning parameters** (`kP`, `kD`, joint springs/dampers, force magnitudes, speed caps) must be `[SerializeField]` with `[Range]` attributes — never hardcoded literals.
+1. **All physics tuning parameters** (`kP`, `kD`, joint springs/dampers, force magnitudes, speed caps) must be `[SerializeField]` with `[Range]` attributes - never hardcoded literals.
 2. **Joint configuration data** (angle limits, drive springs, mass) should live in ScriptableObjects or serialized structs so ragdoll variants are data-driven.
 3. **Do not set `Rigidbody.velocity` directly** for gameplay movement. Use `AddForce` / `AddTorque` with appropriate `ForceMode`. Velocity clamping via `ClampMagnitude` is acceptable as a safety cap only.
 4. **State machine transitions** must be explicit and logged at `Debug.Log` level during development (guarded by a `[SerializeField] bool _debugStateTransitions`).
-5. **Networking guard pattern** — every `NetworkBehaviour` method that applies gameplay logic must be guarded:
+5. **Networking guard pattern** - every `NetworkBehaviour` method that applies gameplay logic must be guarded:
    - Input reading: `if (!IsOwner) return;`
    - Physics / state mutation: `if (!IsServer) return;`
    - Visual-only client effects: `if (IsServer) return;`
@@ -103,40 +103,40 @@ Update this section as phases are completed so future agents know the current st
 
 | Phase | Status | Notes |
 |-------|--------|-------|
-| 0 — Project Setup | **Complete** | Unity 6000.3.9f1, packages added, physics configured, layers 8–12 set, folder structure created. |
-| 1 — Ragdoll Skeleton | **Complete** | `RagdollSetup.cs` done. `RagdollBuilder` Editor tool creates prefab. Tests passing. |
-| 2 — Balance Controller | **Complete** | 2A joint drives, 2B `GroundSensor.cs`, 2C `BalanceController.cs` — PD torque, IsFallen, SetFacingDirection. All tests passing. |
-| 3A — Player Input | **Complete** | Input action wiring done. |
-| 3B1–3B3 — PlayerMovement | **Complete** | Movement forces, speed cap, `SetMoveInputForTest` seam added. |
-| 3C1–3C3 — FSM + Get-Up | **Complete** | `CharacterState.cs` scaffold, transitions, fallen timer, get-up impulse + recovery timeout. |
-| 3D1 — Yaw Torque Split | **Complete (2026-02-22)** | Split upright (pitch/roll) and yaw (world Y) into separate PD torques. `_kPYaw`, `_kDYaw` added. Airborne multiplier upright-only. |
-| 3D2 — Yaw Stability Hardening | **Complete (2026-02-22)** | Dead zone `_yawDeadZoneDeg` (default 2°), normalised yaw vectors, zero-input facing retention, NaN guards. 59/59 PlayMode + 9 EditMode passing. |
-| **3E1 — LegAnimator Core** | **Complete (2026-02-22)** | `LegAnimator.cs` on Hips. Phase accumulator from move input magnitude. Sinusoidal upper-leg alternation (L/R offset π). Constant knee-bend lower legs. Fallen/GettingUp bypass to identity. 18 new PlayMode tests; 77/77 PlayMode + 9/9 EditMode passing. |
-| **3E2 — Leg Settle & Idle Blend** | **Complete (2026-02-22)** | `_idleBlendSpeed` serialized field added. Phase decay toward 0 on idle. `_smoothedInputMag` ramps 0→1 on gait re-entry (anti-pop). Legs snap to identity when idle. 8 new PlayMode tests; 85/85 PlayMode passing. |
+| 0 - Project Setup | **Complete** | Unity 6000.3.9f1, packages added, physics configured, layers 8-12 set, folder structure created. |
+| 1 - Ragdoll Skeleton | **Complete** | `RagdollSetup.cs` done. `RagdollBuilder` Editor tool creates prefab. Tests passing. |
+| 2 - Balance Controller | **Complete** | 2A joint drives, 2B `GroundSensor.cs`, 2C `BalanceController.cs` - PD torque, IsFallen, SetFacingDirection. All tests passing. |
+| 3A - Player Input | **Complete** | Input action wiring done. |
+| 3B1-3B3 - PlayerMovement | **Complete** | Movement forces, speed cap, `SetMoveInputForTest` seam added. |
+| 3C1-3C3 - FSM + Get-Up | **Complete** | `CharacterState.cs` scaffold, transitions, fallen timer, get-up impulse + recovery timeout. |
+| 3D1 - Yaw Torque Split | **Complete (2026-02-22)** | Split upright (pitch/roll) and yaw (world Y) into separate PD torques. `_kPYaw`, `_kDYaw` added. Airborne multiplier upright-only. |
+| 3D2 - Yaw Stability Hardening | **Complete (2026-02-22)** | Dead zone `_yawDeadZoneDeg` (default 2°), normalised yaw vectors, zero-input facing retention, NaN guards. 59/59 PlayMode + 9 EditMode passing. |
+| **3E1 - LegAnimator Core** | **Complete (2026-02-22)** | `LegAnimator.cs` on Hips. Phase accumulator from move input magnitude. Sinusoidal upper-leg alternation (L/R offset π). Constant knee-bend lower legs. Fallen/GettingUp bypass to identity. 18 new PlayMode tests; 77/77 PlayMode + 9/9 EditMode passing. |
+| **3E2 - Leg Settle & Idle Blend** | **Complete (2026-02-22)** | `_idleBlendSpeed` serialized field added. Phase decay toward 0 on idle. `_smoothedInputMag` ramps 0→1 on gait re-entry (anti-pop). Legs snap to identity when idle. 8 new PlayMode tests; 85/85 PlayMode passing. |
 | **3E fixes** | **Complete (2026-02-22)** | Fixed joint axis (Z→X via `_swingAxis`), bumped leg springs to 1200 Nm/rad, enforced Slerp drive mode. Knee-lift regression test added (`LowerLeg_WhenWalking_LiftsBeyondMinimumThreshold`, 5° threshold, outcome-based). 101/101 passing. |
-| **3E3 — World-Space Leg Swing** | **Complete (2026-02-22)** | `_useWorldSpaceSwing` (bool, default true) added. Leg swing now computed relative to world-space movement direction (velocity proxy, XZ input fallback). `ApplyWorldSpaceJointTarget` converts world rotation to connected-body local frame. Knee bend uses same world-horizontal axis so knees never fold into ground regardless of torso pitch. 3 new PlayMode tests; 104/104 PlayMode + 9/9 EditMode passing. |
-| **3E4 — ArmAnimator** | **Complete (2026-02-23)** | `ArmAnimator.cs` added — counter-swings arms opposite to legs using `LegAnimator.Phase` and `LegAnimator.SmoothedInputMag` (two new public properties). UpperArm SLERP drives added to `RagdollSetup` (spring=800, damper=80, maxForce=3000). LowerArm/Hand joints remain floppy. 3 new EditMode tests; 12/12 EditMode passing. |
-| 3F1 — Jump Impulse | **Complete (2026-02-23)** | `_jumpForce = 15f` [SerializeField] added to `PlayerMovement`. `SetJumpInputForTest(bool)` seam added (matches `SetMoveInputForTest` pattern). Jump gated on Standing/Moving state + `IsGrounded`. `AddForce(Vector3.up * _jumpForce, ForceMode.Impulse)` on Hips Rb. One-frame consume via `_jumpPressedThisFrame` flag (cleared unconditionally in `TryApplyJump()`). Space key wired via existing `PlayerInputActions.Player.Jump` binding. 5 new PlayMode tests; 112/128 total (15 pre-existing LegAnimator failures from tuned defaults, not introduced by 3F1). |
-| 3F2 — Airborne Leg Spring | Not started | |
-| 3G1 — Camera Follow | Not started | |
-| 3G2 — Camera Scene Wiring | Not started | |
-| 3T — Phase 3 Test Pass | Not started | |
-| 4 — Grabbing & Combat | Not started | |
-| 5 — Networking | Not started | |
-| 6 — Game Loop & UI | Not started | |
-| 7 — Polish & Juice | Not started | |
+| **3E3 - World-Space Leg Swing** | **Complete (2026-02-22)** | `_useWorldSpaceSwing` (bool, default true) added. Leg swing now computed relative to world-space movement direction (velocity proxy, XZ input fallback). `ApplyWorldSpaceJointTarget` converts world rotation to connected-body local frame. Knee bend uses same world-horizontal axis so knees never fold into ground regardless of torso pitch. 3 new PlayMode tests; 104/104 PlayMode + 9/9 EditMode passing. |
+| **3E4 - ArmAnimator** | **Complete (2026-02-23)** | `ArmAnimator.cs` added - counter-swings arms opposite to legs using `LegAnimator.Phase` and `LegAnimator.SmoothedInputMag` (two new public properties). UpperArm SLERP drives added to `RagdollSetup` (spring=800, damper=80, maxForce=3000). LowerArm/Hand joints remain floppy. 3 new EditMode tests; 12/12 EditMode passing. |
+| 3F1 - Jump Impulse | **Complete (2026-02-23)** | `_jumpForce = 15f` [SerializeField] added to `PlayerMovement`. `SetJumpInputForTest(bool)` seam added (matches `SetMoveInputForTest` pattern). Jump gated on Standing/Moving state + `IsGrounded`. `AddForce(Vector3.up * _jumpForce, ForceMode.Impulse)` on Hips Rb. One-frame consume via `_jumpPressedThisFrame` flag (cleared unconditionally in `TryApplyJump()`). Space key wired via existing `PlayerInputActions.Player.Jump` binding. 5 new PlayMode tests; 112/128 total (15 pre-existing LegAnimator failures from tuned defaults, not introduced by 3F1). |
+| 3F2 - Airborne Leg Spring | **Complete (2026-02-23)** | Springs scale to 0.15× airborne, restore on landing. `CaptureBaselineDrives()` moved to `Start()`. Guard added for zero-baseline edge case. `GaitOutcomeTests.cs` added (4 outcome tests). 129/131 passing. |
+| 3G1 - Camera Follow | **Complete (2026-02-23)** | `CameraFollow.cs` delivered by Jermie — orbital third-person, mouse/stick orbit, pitch clamp, SphereCast collision avoidance, cursor lock. |
+| 3G2 - Camera Scene Wiring | **Complete (2026-02-23)** | `CameraFollow` wired to Main Camera in Arena_01. Fixed camera-relative movement freeze at ±180° (yaw error clamped, yaw gate removed from LegAnimator). |
+| 3T - Phase 3 Test Pass | Not started | |
+| 4 - Grabbing & Combat | Not started | |
+| 5 - Networking | Not started | |
+| 6 - Game Loop & UI | Not started | |
+| 7 - Polish & Juice | Not started | |
 
 ---
 
 ## Quick Workflow Reminder
 
-Every task follows **CODING_STANDARDS.md §1** — the six mandatory phases:
+Every task follows **CODING_STANDARDS.md §1** - the six mandatory phases:
 
 ```
-A. Understand → B. Comment Design → C. Write Tests (red) → D. Implement (green) → E. Verify → F. Self-Review (F1–F10 checklist)
+A. Understand → B. Comment Design → C. Write Tests (red) → D. Implement (green) → E. Verify → F. Self-Review (F1-F10 checklist)
 ```
 
-Present the F1–F10 self-review table to the user before committing. See `CODING_STANDARDS.md` §1 Phase F for the full checklist.
+Present the F1-F10 self-review table to the user before committing. See `CODING_STANDARDS.md` §1 Phase F for the full checklist.
 
 Run tests from the terminal using the commands in `AGENT_TEST_RUNNING.md`. Do not ask the user to open the Test Runner window.
 
@@ -146,9 +146,9 @@ Run tests from the terminal using the commands in `AGENT_TEST_RUNNING.md`. Do no
 - Before running tests, ensure no Unity process is open for this project.
 - Run EditMode first, then PlayMode, and verify that `TestResults/*.xml` timestamps are freshly updated.
 - Prefer the absolute-path `-NoProfile` invocation of `Tools/Run-UnityTests.ps1` for better terminal reliability.
-- If Unity exits but `TestResults/*.xml` is missing, treat it as transient infra/lock race and rerun (up to 2–3 attempts) before concluding failure.
+- If Unity exits but `TestResults/*.xml` is missing, treat it as transient infra/lock race and rerun (up to 2-3 attempts) before concluding failure.
 
-### Test Quality Rule — Outcomes over Inputs
+### Test Quality Rule - Outcomes over Inputs
 
 **Prefer outcome-based tests over input-based tests.**
 
@@ -156,9 +156,9 @@ Run tests from the terminal using the commands in `AGENT_TEST_RUNNING.md`. Do no
 - ✅ **Strong:** Assert that the joint/transform *physically moved* to a measurable position or angle → proves the system actually worked
 
 Examples of outcome-based tests:
-- A leg lift test that asserts `LowerLeg.position.y` exceeds a minimum threshold after N physics frames of walking — not just that `targetRotation` was set
-- A balance test that asserts the character's hips stay within X degrees of upright after N frames — not just that torque was applied
-- A get-up test that asserts the character reaches a standing hip height — not just that `GettingUp` state was entered
+- A leg lift test that asserts `LowerLeg.position.y` exceeds a minimum threshold after N physics frames of walking - not just that `targetRotation` was set
+- A balance test that asserts the character's hips stay within X degrees of upright after N frames - not just that torque was applied
+- A get-up test that asserts the character reaches a standing hip height - not just that `GettingUp` state was entered
 
 **Why:** Input-based tests can pass even when the physics system is completely broken (wrong axis, weak springs, wrong drive mode). Outcome-based tests catch real regressions. When in doubt, ask: *"would this test have caught the dragging-feet bug?"* If no, make it stronger.
 
